fix ui-dialog z-index with navbar

--- a/ecomm_jquery/css_ecomm_jquery_v3_bootstrap.css
+++ b/ecomm_jquery/css_ecomm_jquery_v3_bootstrap.css
@@ -701,4 +701,5 @@ root {
     position: relative;
     text-align: center;
 }
-.ui-widget-overlay,.ui-dialog{z-index:100001 !important}
+.ui-dialog{z-index:100001 !important}
+.ui-widget-overlay{z-index:100000 !important}
